objects/UPC_Site_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Site Manager</fullName>
                    <isActive>false</isActive>
                    <label>Site Manager</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Contact_Email__c</fullName>
        <formula>UPC_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact_Mobile__c</fullName>
        <formula>UPC_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact_Phone__c</fullName>
        <formula>UPC_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Contacts</relationshipLabel>
        <relationshipName>Site_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Taifun_Reconciliation__c</fullName>
        <label>Last Taifun Reconciliation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Name__c</fullName>
        <formula>UPC_Site__r.Site_Name__c</formula>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Site Contacts</relationshipLabel>
        <relationshipName>Site_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00}</displayFormat>
        <label>Site Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>